--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,62 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+* {
+  border-radius: 0 !important;
+}
+
+h1 {
+  font-family: 'Amatic SC', "Courier New", Courier, monospace;
+  color: black;
+  text-align: center;
+}
+
+.navbar {
+   background-color: black;
+   position: fixed;
+   width: 100%; 
+   top: 0;
+   z-index: 998;
+   left: 0;
+   margin-bottom: 0;
+   margin-left: 0;
+}
+
+.navbar a {
+  -webkit-transition: color 600ms;
+}
+
+
+.navbar a:hover {
+       color: black;
+       text-decoration: none;
+       display: inline-block;
+}
+
+.navbar ul li a {
+   color: white;
+   text-decoration: none;
+}
+
+
+.logo a {
+    color: white;
+    text-decoration: none;
+    -webkit-transition: color 600ms;
+}
+
+.logo a:hover {
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+    text-align: center;
+    color: grey;
+}
