--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to Bike Berlin</h1>
+<%= image_tag("main-image.jpg", class: "img-responsive main-image") %>
+
+<h1>Welcome to Bikes Berlin</h1>
 <h2>Your source for used bikes in Berlin</h2>
