--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   </head>
 
-  <body style="padding-top: 40px;"> <!-- so content won't get overlayed by the navbar --> 
+  <body data-spy="scroll" data-target=".navbar"> <!-- so content won't get overlayed by the navbar --> 
 
         <nav class="navbar navbar-inverse navbar-fixed" role="navigation">
           <div class="navbar-header navbar-fixed-top">
@@ -51,7 +51,7 @@
 
 <footer class="footer">
       <div class="container">
-        <p class="text-muted center-block">&copy; 2015 Bikes Berlin</p>
+        <p>&copy; 2015 Bikes Berlin</p>
       </div>
 </footer>
 
