--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 
 <footer class="footer">
       <div class="container">
-        <p>&copy; 2015 Bikes Berlin</p>
+        <p class="footercr">&copy; 2016 Bikes Berlin</p>
       </div>
 </footer>
 
