--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -18,6 +18,13 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-family: "Courier New", Courier, monospace;
+  color: black;
+  text-align: center;
+  font-size: 13px;
+}
+
 .main-image {
   /* Preserve aspet ratio */
   z-index: 999;
@@ -69,8 +76,13 @@ h1 {
     position: relative;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 50px;
     background-color: #f5f5f5;
-    text-align: center;
     color: grey;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 12px;
+    bottom: 0;
+    text-align: center;
 }
+
+.footercr { margin-top: 20px;}
