--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,19 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<div class="row">
+	<div class="col-md-4">
+	  <p>
+	  	<strong>Name:</strong>
+	  	<%= @product.name %>
+		</p>
+	</div>	
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+<div class="col-md-4">
+	<p>
+	  <strong>Description:</strong>
+	  <%= @product.description %>
+	</p>
+</div>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
+<div class="col-md-4">
+	<p>
+	  <strong>Image url:</strong>
+	  <%= @product.image_url %>
+	</p>
+</div>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
