--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -8,5 +8,17 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
-  margin: 30px;
 }
+
+table {
+	margin: 30px;
+}
+
+p { margin: 30px;}
+
+h1, h2 { margin-top: 60px;}
+
+#form {padding: 30px;
+text-align: center;}
+
+
