--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,25 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<div class="row">
-	<div class="col-md-4">
-	  <p>
-	  	<strong>Name:</strong>
-	  	<%= @product.name %>
-		</p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+		  <p>
+		  	<strong>Name:</strong>
+		  	<%= @product.name %>
+			</p>
 	</div>	
 
-<div class="col-md-4">
-	<p>
-	  <strong>Description:</strong>
-	  <%= @product.description %>
-	</p>
-</div>
+	<div class="col-md-4">
+		<p>
+		  <strong>Description:</strong>
+		  <%= @product.description %>
+		</p>
+	</div>
 
-<div class="col-md-4">
-	<p>
-	  <strong>Image url:</strong>
-	  <%= @product.image_url %>
-	</p>
+	<div class="col-md-4">
+		<p>
+		  <strong>Image url:</strong>
+		  <%= @product.image_url %>
+		</p>
+	</div>
 </div>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
