--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,29 +2,22 @@
 
 <h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
+<div class="container-fluid">
+  <div class="row">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
+      <div class="col-md-3 col-sm-4 col-xs-12">
+        <h1><%= product.name %></h1>
+        <%= image_tag(product.image_url, class: "img-responsive") if product.image_url %>
+        <p><%= product.description %></p>
+        <strong><%= product.price %> €</strong><br>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      </div><!-- /col -->
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
 
 <br>
 
