--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Product</h1>
-<div id="form">
+<div class="form">
 <%= render 'form', product: @product %>
 
 <%= link_to 'Back', products_path %>
