--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,24 +6,38 @@
 }
 
 body {
-      background-color: white;
-      color: black;
-      position: relative;
-      overflow-x: hidden;
-      margin-top: 40px;
+  background-color: white;
+  position: relative;
+  overflow-x: hidden;
+  margin-top: 40px;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 10px;
+  color: #333333;
 }
 
+
 h1 {
-  font-family: 'Amatic SC', "Courier New", Courier, monospace;
-  color: black;
   text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 11px;
+  color: #333333;
+  text-transform: uppercase;
 }
 
 h2 {
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Times New Roman", "Courier New", Courier, monospace;
   color: black;
   text-align: center;
-  font-size: 13px;
+  font-size: 11px;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: "Times New Roman", "Courier New", Courier, monospace;
+  color: grey;
+  text-align: center;
+  font-size: 10px;
+  text-transform: uppercase;
 }
 
 .main-image {
@@ -34,14 +48,26 @@ h2 {
 }
 
 .navbar {
-   background-color: black;
-   position: fixed;
-   width: 100%; 
-   top: 0;
-   z-index: 998;
-   left: 0;
-   margin-bottom: 0;
-   margin-left: 0;
+ background-color: white;
+ position: fixed;
+ width: 100%; 
+ top: 0;
+ z-index: 998;
+ left: 0;
+ margin-bottom: 0;
+ margin-left: 0;
+ text-align: center;
+ border: none;
+}
+
+.navbar .navbar-nav {
+  float: right;
+  vertical-align: top;
+  margin-right: 100px;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
 }
 
 .navbar a {
@@ -50,40 +76,46 @@ h2 {
 
 
 .navbar a:hover {
-       color: black;
-       text-decoration: none;
-       display: inline-block;
+ color: black;
+ text-decoration: none;
+ display: inline-block;
 }
 
 .navbar ul li a {
-   color: white;
-   text-decoration: none;
+ color: white;
+ text-decoration: none;
+ font-family: "Times New Roman", Times, serif;
+ font-size: 11px;
+ color: #333333;
+ text-transform: uppercase;
 }
+
 
 
 .logo a {
-    color: white;
-    text-decoration: none;
-    -webkit-transition: color 600ms;
+  color: grey;
+  text-decoration: none;
+  -webkit-transition: color 600ms;
+    margin-left: 100px;
 }
 
 .logo a:hover {
-    color: black;
-    text-decoration: none;
-    display: inline-block;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
 }
 
 .footer {
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    background-color: #f5f5f5;
-    color: grey;
-    font-family: "Courier New", Courier, monospace;
-    font-size: 12px;
-    bottom: 0;
-    text-align: center;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #f5f5f5;
+  color: grey;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 12px;
+  bottom: 0;
+  text-align: center;
 }
 
 .footercr { margin-top: 20px;}
