--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,8 @@
         </div> <!--end projectName -->
 
 
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
+        <div class="navbar-collapse collapse center">
+          <ul class="nav navbar-nav">
             <li><a href="#index">HOME</a></li>
             <li><a href="#work">WORK</a></li>
             <li><a href="#about">ABOUT</a></li>
