--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>Contact Info</h1>
+<div class="header">
+<h1>contact info</h1>
+</div>
+
 <p>Find me in app/views/static_pages/contact.html.erb</p>
