--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -113,15 +113,28 @@ p {
   background-color: #f5f5f5;
   color: grey;
   font-family: "Courier New", Courier, monospace;
-  font-size: 12px;
-  bottom: 0;
+  font-size: 10px;
   text-align: center;
-}
+} 
 
-.footercr { margin-top: 20px;}
+/**
+.footer { 
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  bottom: 0;
+  background-color: #f5f5f5;
+  font-family: 'Times New Roman', "Courier New", Courier, monospace;
+  font-size: 12px;
+  text-align: center;
+  } **/
+
+.footercr { 
+  margin-top: 20px;
+}
 
 #landing-img {
     display: inline-block;      /* iframes are inline by default */
-    height: 100%;        /* Viewport-relative units */
+  /* Viewport-relative units */
     width: 100%;
 }
