--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,17 +6,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-md-3 col-sm-4 col-xs-12">
-        <%= image_tag(product.image_url, class: "img-responsive") if product.image_url %>
-        <h2><%= product.name %></h2>
-        <p><%= product.description %></p>
-        <strong><%= product.price %> €</strong><br>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </div><!-- /col -->
-    <% end %>
+    <%= render @products %>
   </div>
 </div>
 
