--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,11 @@
 
   </head>
 
+  <div class="page-wrap">
+
   <body data-spy="scroll" data-target=".navbar"> <!-- so content won't get overlayed by the navbar --> 
+
+    <div class="page-wrap">
 
         <nav class="navbar navbar-inverse navbar-fixed" role="navigation">
           <div class="navbar-header navbar-fixed-top">
@@ -38,8 +42,8 @@
 
         <div class="navbar-collapse collapse center">
           <ul class="nav navbar-nav">
-            <li><a href="#index">HOME</a></li>
-            <li><a href="#work">WORK</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#products">PRODUCTS</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#contact">CONTACT</a></li>
             <li><a href="#more">MORE</a></li>
@@ -54,6 +58,8 @@
         <p class="footercr">&copy; 2016 Bikes Berlin</p>
       </div>
 </footer>
+
+</div>
 
   </body>
 </html>
