--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -20,8 +20,12 @@ p { margin: 30px;}
 
 h1 { padding: 50px;}
 
-.form {padding: 30px;
-text-align: center;}
+.form {padding: 20px;
+text-align: center;
+margin-top: -50px;
+}
 
+
+.col-xs-12 { height: 500px;}
 
 
