--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,26 +19,20 @@
 
 		<div class="col-md-3">
 			<p>
-			  <strong>Image url:</strong>
-			  <%= @product.image_url %>
+			  <strong>Image:</strong>
+			  <%= image_tag(@product.image_url, class: "img-responsive") if @product.image_url %>
 			</p>
 		</div>
 
-		<div class="col-md-3">
-			<p>
-			  <strong>Colour:</strong>
-			  <%= @product.colour %>
-			</p>
-		</div>
 
 		<div class="col-md-3">
 			<p>
 			  <strong>Price:</strong>
-			  <%= @product.price %>
+			  <%= @product.price %> €
 			</p>
 		</div>
 	
-	<div class="col-md-4">
+	<div class="col-md-3">
 		<p>
 			<%= link_to 'Edit', edit_product_path(@product) %> |
 	<%= link_to 'Back', products_path %>
