--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,9 @@
 
   </head>
 
-  <div class="page-wrap">
 
   <body data-spy="scroll" data-target=".navbar"> <!-- so content won't get overlayed by the navbar --> 
 
-    <div class="page-wrap">
 
         <nav class="navbar navbar-inverse navbar-fixed" role="navigation">
           <div class="navbar-header navbar-fixed-top">
@@ -42,10 +40,16 @@
 
         <div class="navbar-collapse collapse center">
           <ul class="nav navbar-nav">
-            <li><%= link_to "home", 'static_pages/landing_page' %> </li>
+            <li><%= link_to "home", root_url %> </li>
             <li><%= link_to "Products", products_path %></li>
             <li> <%= link_to "About", '/static_pages/about' %> </li>
             <li><%= link_to "Contact", '/static_pages/contact' %></li>
+            <li class="nav-search">
+              <%= form_tag("/products", method: "get") do %>
+                <%= text_field_tag(:q) %>
+                <%= submit_tag("Go!", class: 'button-s') %>
+              <% end %>
+            </li>
           </ul>
         </div> <!-- END NAVBAR COLLAPSE -->
       </nav> <!-- END NAVBAR -->
@@ -58,7 +62,7 @@
       </div>
 </footer>
 
-</div>
+
 
   </body>
 </html>
