--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
     <title>Nameofapp</title>
     <%= csrf_meta_tags %>
 
-		<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -19,7 +19,7 @@
   </head>
 
 
-  <body data-spy="scroll" data-target=".navbar"> <!-- so content won't get overlayed by the navbar --> 
+  <body data-spy="scroll" data-target=".navbar" class="wrap"> <!-- so content won't get overlayed by the navbar --> 
 
 
         <nav class="navbar navbar-inverse navbar-fixed" role="navigation">
@@ -64,5 +64,5 @@
 
 
 
-  </body>
+ </body>
 </html>
