--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,4 +1,4 @@
-<h2>Featured Product:</h2>
+<!-- <h2>Featured Product:</h2> -->
 
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
