--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,14 +3,14 @@
 <div class="header">
 <h1>Products</h1>
 </div>
-
 <div class="container-fluid">
+	<div class="pages"><%= will_paginate @products %></div>
   <div class="row">
     <%= render @products %>
   </div>
 </div>
 
 <br>
-
 <p><%= link_to '///add product///', new_product_path %></p>
+
 
