--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,9 @@
 <h1>Products</h1>
 
-<p id="notice"><%= notice %></p>
-
 	<div class="row">
 
 		<div class="col-md-12">
 			<p>
-			  <strong>Image:</strong>
 			  <%= image_tag(@product.image_url, class: "img-responsive") if @product.image_url %>
 			</p>
 		</div>
@@ -38,6 +35,13 @@
 		</div>
 
 		<div class="col-md-12">
+			<%= form_tag "/payments/create" do %>
+	  	<%= render partial: "shared/stripe_checkout_button" %>
+			<% end %>
+		</div>
+
+
+		<div class="col-md-12">
 			<%= render partial:'new_comment' %>
 		</div>
 
@@ -48,7 +52,10 @@
 	<div class="col-md-12">
 		<p>
 			<%= link_to 'Edit', edit_product_path(@product) %> |
-	<%= link_to 'Back', products_path %>
+			<%= link_to 'Back', products_path %>
 		</p>
+
 	</div>
 </div>
+
+
