--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,6 +39,8 @@
 
 			<% if signed_in? %>
 				<%= form_tag "/payments/create" do %>
+				<!-- making product_id accessible: this enables payments controller to access product -->
+				<%= hidden_field_tag(:product_id, @product.id) %>
 		  	<%= render partial: "shared/stripe_checkout_button" %>
 				<% end %>
 			<% end %>
