--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
   <body data-spy="scroll" data-target=".navbar" class="wrap"> <!-- so content won't get overlayed by the navbar --> 
     <% if notice %>
-      <p id="notice" class="alert alert-info"><%= notice %></p>
+      <p id="notice" class="alert notice-info"><%= notice %></p>
     <% end %>
     <% if alert %>
       <p id="alert" class="alert alert-info"><%= alert %></p>
