--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -27,11 +27,18 @@ h1 { font-size: 4em; }
 h2 { font-size: 3em; }
 h3 { font-size: 2em; }
 
-.alert-info {
+.notice-info {
   background-color: white;
   border: none;
   color: #a1cee3;
 }
+
+.alert-info {
+  background-color: white;
+  border: none;
+  color: #ffa5d2;
+}
+
 
 h1 {
   text-align: center;
