assets re-generated

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -25,12 +25,16 @@ text-align: center;
 margin-top: -50px;
 }
 
-.row {text-align: center; }
+.row { text-align: center; }
 
-.col-xs-12 { height: 500px;}
+.col-xs-12 { height: 500px; }
 
 .pages {
 	text-align: center;
 }
 
+.average-rating {
+	position: relative;
+	left: 45%;
+}
 
