--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -27,6 +27,8 @@ h1 { font-size: 4em; }
 h2 { font-size: 3em; }
 h3 { font-size: 2em; }
 
+.row { text-align: center; }
+
 .notice-info {
   background-color: white;
   border: none;
