--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -1,6 +1,6 @@
 <script
   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-  data-key="<%= Rails.configuration.stripe[:pk_test_Ht7SG3skQy8jHhCMnW5ZJeHf] %>"
+  data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
   data-image="<%= @product.image_url %>"
   data-name="<%= @product.name %>"
   data-description="<%= @product.description %>"
