--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,6 +26,6 @@
   </table>
 <br>
 
-<div class="col-sm-6 col-md-4">
+<div class="col-md-12 m-t">
   <%= link_to 'New User', new_user_path, class:"btn btn-default btn-xs" %>
 </div>
