--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,15 @@
 <h1>New User</h1>
+<div class="row">
+  <div class="col-md-12 m-t">
+    <div class="form-group">
+
 
 <%= render 'form' %>
 
-<div class="col-sm-6 col-md-4">
+</div>
+</div>
+</div>
+
+<div class="col-md-12">
 	<%= link_to 'Back', users_path, class:"btn btn-default btn-xs" %>
 </div>
