--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
   <% if alert %>
   <p id="alert" class="alert alert-info"><%= alert %></p>
   <% end %>
-<div class="top-bar"><%= image_tag("bicis.jpg", :alt => "bicislogo", class:"logo") %></div>
+  <div class="top-bar"><%= image_tag("bicis.jpg", alt: "bicislogo", class:"logo") %></div>
   <nav class="navbar navbar-inverse navbar-fixed" role="navigation">
     <div class="navbar-header navbar-fixed-top">
       <button type="button" class="navbar-toggle" data-toggle="collapse"
