--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,14 @@
-
+<div class="headers">
 <h1>Products</h1>
+</div>
+
 
 <div class="row">
 
 	<div class="col-md-12">
-		<p>
+		<div class="imgc">
 			<%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: @product.image_url) if @product.image_url %>
-		</p>
-
+		</div>
 		<p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div> </p>
 
 		<% cache @product do %>
