--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,7 @@
-<div class="header">
-<h1>about us</h1>
+<div class="headers">
+<h1>About Me</h1>
 </div>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+
+<p class="pabout">I am a junior web developer with a background in marketing and photography<br>
+I am looking for an opportunity to work in a dynamic environment where my skills will add value to products being built<br>
+check my portfolio here</p>
