--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -20,14 +20,29 @@ p { margin: 30px;}
 
 h1 { padding: 10px;}
 
-.form {padding: 20px;
+
+.form {
+padding: 20px;
 text-align: center;
 margin-top: -50px;
 }
 
-.row { text-align: center; }
+.edit_product {
+  margin-top: 30px;
+}
 
-.col-xs-12 { height: 500px; }
+.new_product {
+  margin-top: 30px;
+}
+
+.new_user {
+  margin-top: 30px;
+}
+
+.pabout {
+  color: #956cae;
+}
+
 
 .pages {
 	text-align: center;
@@ -37,4 +52,3 @@ margin-top: -50px;
 	position: relative;
 	left: 45%;
 }
-
