--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -24,15 +24,6 @@ text-align: center;}
 
 .logo {height: 25px;}
 
-
-h1,h2,h3,h4,h5,h6,p {
-  line-height: 1.45;
-}
-
-h1 { font-size: 4em; }
-h2 { font-size: 3em; }
-h3 { font-size: 2em; }
-
 .row { text-align: center; }
 
 .notice-info {
@@ -47,14 +38,18 @@ h3 { font-size: 2em; }
   color: #ffa5d2;
 }
 
-
+.headers {
+  border-bottom: 1px solid #d7d7d7;
+  margin-bottom: 10px;
+}
 h1 {
   text-align: center;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 11px;
-  color: #333333;
+  font-family: 'Alegreya Sans SC', "Times New Roman", Times, serif;
+  color: #00b6b4;
   text-transform: uppercase;
-  margin-bottom: -10px;
+  margin: auto;
+  font-size: 13px;
+  font-weight: 300;
 }
 
 h2 {
@@ -226,12 +221,13 @@ font-family: "Times New Roman";
   bottom: 0;
   width: 100%;
   height: 50px;
-  background-color: #f5f5f5;
   color: grey;
   font-family: 'Alegreya Sans SC', "Courier New", Courier, monospace;
   font-size: 10px;
-  text-align: center;
+  margin-top: 10px;
   margin-bottom: 50px;
+  border-top: 1px solid #d7d7d7;
+  border-bottom: 1px solid #d7d7d7;
 }
 
 .footercr {
