--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,7 @@
-<h1>Editing Product</h1>
+<div class="headers">
+<h1>Editing product</h1>
+</div>
+
 <div class="form">
 <%= render 'form', product: @product %>
 
