--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,7 @@
-<h1>New Product</h1>
+<div class="headers">
+<h1>New product</h1>
+</div>
+
 <div class="form">
 <%= render 'form', product: @product %>
 
