--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,5 +3,5 @@
 </div>
 
 <p class="pabout">I am a junior web developer with a background in marketing and photography<br>
-I am looking for an opportunity to work in a dynamic environment where my skills will add value to products being built<br>
-check my portfolio here</p>
+I am looking for an opportunity to work in a dynamic environment where my skills will add value to products being built<br><br><br>
+<a id="click" href="http://jen.bitballoon.com/" target="_blank">check my portfolio here</a></p><br>
