--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,6 +2,7 @@
 <h1>About Me</h1>
 </div>
 
-<p class="pabout">I am a junior web developer with a background in marketing and photography<br>
+<p class="pabout">Hi, my name is Jen<br>
+I am a junior web developer with a background in marketing and photography<br>
 I am looking for an opportunity to work in a dynamic environment where my skills will add value to products being built<br><br><br>
 <a id="click" href="http://jen.bitballoon.com/" target="_blank">check my portfolio here</a></p><br>
